style: fix whitespace issue on name view in navbar

--- a/src/style/common.styl
+++ b/src/style/common.styl
@@ -93,3 +93,6 @@ input
     background white
     padding 30px 15px
 
+.inline-block
+  display inline-block
+
